--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>Hello World</H1>
+    <H1>Hello Vijay</H1>
+    <P>Hello,  how are you?</P>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia labore temporibus adipisci odit nesciunt soluta est repellendus. Neque, atque adipisci?</p>
+   
 </body>
 </html>
